--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "node server.js",
+    "start": "pm2 start server.js --name 'trainset'",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
@@ -80,8 +80,8 @@
     "webpack-merge": "^4.2.2"
   },
   "engines": {
-    "node": "^10.15.1",
-    "npm": "6.x"
+    "node": "^12",
+    "npm": "^7"
   },
   "browserslist": [
     "> 1%",
